updated code backend

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.application.name=BossisIndexServer
+spring.application.name=LuceneSearchToolkitWeb
 spring.web.resources.static-locations[0]=file:src/main/resources/static/
 spring.web.resources.static-locations[1]=classpath:/static/
 spring.devtools.livereload.enabled=true
+spring.config.use-legacy-processing=false
+logging.level.org.springframework.web=DEBUG
+logging.level.net.bossmannchristoph=DEBUG
