--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,8 +18,19 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+			<version>3.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>3.2.5</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,7 +52,11 @@
 			<groupId>net.bossmannchristoph.lucidsearchtoolkit</groupId>
 			<artifactId>lucidsearchtoolkit-core</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
-			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.bossmannchristoph.lucidsearchtoolkit</groupId>
+			<artifactId>lucidsearchtoolkit-explorertools</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -64,8 +79,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>11</source> <!-- or your current Java version -->
-					<target>11</target> <!-- or your current Java version -->
+					<source>17</source> <!-- or your current Java version -->
+					<target>17</target> <!-- or your current Java version -->
 					<compilerArgs>
 						<arg>-parameters</arg>
 					</compilerArgs>
