--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,6 +34,16 @@
 								<mainClass>net.bossmannchristoph.lucidsearchtoolkit.core.ConsoleInterfaceHandler</mainClass>
 							</transformer>
 						</transformers>
+						<filters>
+							<filter>
+								<artifact>*:*</artifact>
+								<excludes>
+									<exclude>META-INF/*.SF</exclude>
+									<exclude>META-INF/*.DSA</exclude>
+									<exclude>META-INF/*.RSA</exclude>
+								</excludes>
+							</filter>
+						</filters>
 					</configuration>
 					<executions>
 						<execution>
