--- a/explorertools/pom.xml
+++ b/explorertools/pom.xml
@@ -35,6 +35,16 @@
 								<mainClass>net.bossmannchristoph.lucidsearchtoolkit.explorertools.ExplorerWindows</mainClass>
 							</transformer>
 						</transformers>
+						<filters>
+							<filter>
+								<artifact>*:*</artifact>
+								<excludes>
+									<exclude>META-INF/*.SF</exclude>
+									<exclude>META-INF/*.DSA</exclude>
+									<exclude>META-INF/*.RSA</exclude>
+								</excludes>
+							</filter>
+						</filters>
 					</configuration>
 					<executions>
 						<execution>
