--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     
     <groupId>net.bossmannchristoph.lucidsearchtoolkit</groupId>
     <artifactId>lucidsearchtoolkit-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     
     <modules>
